# MessAuto

./: Cargo.toml
locales/: app.yml
src/: clipboard.rs  config.rs  language.rs  main.rs  parser.rs  permissions.rs  tray.rs  updater.rs
src/monitor/: message.rs  watcher.rs
