[package]
name = "messauto"
version = "1.2.1"
edition = "2024"
publish = false

[dependencies]
ctrlc = "3.4.5"
eframe = "0.32.0"
image = "0.25.5"
notify = "6.1.1"
tokio = { version = "1.44.1", features = ["full"] }
tray-icon = "0.21.1"
winit = "0.30.12"
log = "0.4.20"
env_logger = "0.10.1"
emlx = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
enigo = "0.5.0"
chrono = "0.4.41"
email = "0.0.21"
rust-i18n = "3.1.5"
auto-launch = "0.5.0"
cargo-packager-updater = { git = "https://github.com/LeeeSe/cargo-packager.git" }
sys-locale = "0.3.2"
sysproxy = "0.3.0"
fancy-regex = "0.16.1"

[package.metadata.packager]
product-name = "MessAuto"
identifier = "com.leeese.messauto"
icons = ["resources/icon_256.png"]

[package.metadata.packager.macos]
background-app = true
signing-identity = "MessAuto_SC"
